# Notes_Generator

./: .gitignore  README.md  app.py  notes_agents.py  prompts.py  pyproject.toml  requirements.txt  tools.py
NotesAgents/: app.py  notes_agents.py  prompts.py
assets/: 29_S-attributed_SDD - Syntax tree Generation.pptx
functions/: cideo_text.py  ppt_parse.py  structured_notes.json
tools/: cideo_text.py  ppt_parse.py  structured_notes.json
