[project]
name = "notes-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "groq>=0.22.0",
    "openai>=1.75.0",
    "openai-agents>=0.0.12",
    "pydub>=0.25.1",
    "python-pptx>=1.0.2",
    "requests>=2.32.3",
]
